--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "build-ui": "lerna run build --scope=hg-ui",
+    "dev-admin": "lerna run dev --scope=hg-admin"
+  },
   "dependencies": {},
   "devDependencies": {
     "lerna": "^8.1.8"
