--- a/packages/hg-ui/package.json
+++ b/packages/hg-ui/package.json
@@ -36,6 +36,7 @@
     "@storybook/addon-links": "^8.3.5",
     "@storybook/addon-onboarding": "^8.3.5",
     "@storybook/blocks": "^8.3.5",
+    "@storybook/nextjs": "^8.3.5",
     "@storybook/react": "^8.3.5",
     "@storybook/react-vite": "^8.3.5",
     "@storybook/test": "^8.3.5",
