--- a/packages/hg-ui/package.json
+++ b/packages/hg-ui/package.json
@@ -1,27 +1,23 @@
 {
-  "name": "hg-ui",
+  "name": "@hannagrams/ui",
   "version": "0.0.0",
   "description": "> TODO: description",
   "author": "Tom Davies <tom.tdigital@gmail.com>",
   "homepage": "https://github.com/tomtdigital/hg-monorepo#readme",
   "license": "ISC",
   "main": "dist/index.js",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
+  "types": "dist/index.d.ts",
   "files": [
-    "lib"
+    "dist/**"
   ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tomtdigital/hg-monorepo.git"
   },
   "scripts": {
-    "test": "node ./__tests__/hg-ui.test.js",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "build": "barrelsby -d ./src --delete --exclude .stories.tsx && tsc"
+    "build": "barrelsby -c ./barrelsby.json --delete && tsc -p tsconfig.prod.json"
   },
   "bugs": {
     "url": "https://github.com/tomtdigital/hg-monorepo/issues"
@@ -40,6 +36,7 @@
     "@storybook/react": "^8.3.5",
     "@storybook/react-vite": "^8.3.5",
     "@storybook/test": "^8.3.5",
+    "@types/react": "^18.3.11",
     "barrelsby": "^2.8.1",
     "prop-types": "^15.8.1",
     "storybook": "^8.3.5",
