--- a/packages/hg-ui/package.json
+++ b/packages/hg-ui/package.json
@@ -24,6 +24,7 @@
     "url": "https://github.com/tomtdigital/hg-monorepo/issues"
   },
   "dependencies": {
+    "next": "^14.2.15",
     "react": "^18.3.1"
   },
   "devDependencies": {
