--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "scripts": {
     "build-sb": "lerna run build-storybook",
     "build-ui": "lerna run build --scope @hannagrams/ui",
+    "build-theme": "lerna run build --scope @hannagrams/theme",
     "build-vite": "lerna run --scope vite-sandbox build",
     "build-admin": "lerna run build --scope @hannagrams/admin",
     "dev-sb": "lerna run storybook",
-    "dev-vite": "lerna run --scope vite-sandbox dev",
+    "dev-vite": "lerna run --scope @hannagrams/ui --scope @hannagrams/theme --scope vite-sandbox --parallel dev",
     "dev-admin": "lerna run --scope @hannagrams/admin --scope @hannagrams/ui --parallel dev"
   },
   "dependencies": {},
