--- a/packages/hg-ui/package.json
+++ b/packages/hg-ui/package.json
@@ -24,6 +24,12 @@
     "url": "https://github.com/tomtdigital/hg-monorepo/issues"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.1.0",
+    "@hannagrams/theme": "^0.0.0",
+    "@mui/icons-material": "^6.1.4",
+    "@mui/material": "^6.1.4",
     "next": "^14.2.15",
     "react": "^18.3.1"
   },
