--- a/packages/vite-sandbox/package.json
+++ b/packages/vite-sandbox/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.1.0",
+    "@hannagrams/theme": "^0.0.0",
+    "@hannagrams/ui": "^0.0.0",
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
     "react": "^18.3.1",
