--- a/packages/hg-admin/package.json
+++ b/packages/hg-admin/package.json
@@ -12,13 +12,15 @@
     "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@hannagrams/ui": "^0.0.0",
     "@hannagrams/theme": "^0.0.0",
+    "@hannagrams/ui": "^0.0.0",
+    "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
     "@mui/material-nextjs": "^6.1.4",
     "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.53.1"
   },
   "devDependencies": {
     "@types/node": "^20",
