data validation - FE and server side

--- a/packages/hg-admin/package.json
+++ b/packages/hg-admin/package.json
@@ -14,13 +14,15 @@
     "@emotion/styled": "^11.13.0",
     "@hannagrams/theme": "^0.0.0",
     "@hannagrams/ui": "^0.0.0",
+    "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
     "@mui/material-nextjs": "^6.1.4",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.53.1"
+    "react-hook-form": "^7.53.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
